# SignalEngine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  data_inventory.csv  pyproject.toml
data/edstock_snapshot/: bond_yields.parquet  crypto_prices.parquet  instruments.parquet  market_pe.parquet  sector_pe.parquet
deploy/: README.md  signalengine.env.example
deploy/docker/: docker-compose.yml  signalengine.cron
deploy/systemd/: signalengine-ingest.service  signalengine-ingest.timer  signalengine-portal.service  signalengine-signals.service  signalengine-signals.timer
docs/: 01-overview.md  02-architecture.md  03-components.md  04-financial-method.md  05-experiments.md  README.md
experiments/: barrier_sweep.py
signalengine/: __init__.py  bench.py  cli.py  config.py  ledger.py  lockbox.py  portal.py
signalengine/backtest/: __init__.py  engine.py
signalengine/data/: __init__.py  export.py  parquet_source.py  source.py  sql_source.py
signalengine/features/: __init__.py  indicators.py  market.py  pipeline.py
signalengine/ingest/: __init__.py  context.py  crypto.py  fundamentals.py  lake.py  markets.py  news.py  providers.py  stocks.py  universe.py
signalengine/labels/: __init__.py  triple_barrier.py
tests/: test_compression_features.py  test_feature_frame.py  test_indicators.py  test_lake.py  test_ledger.py  test_lockbox.py  test_realistic_fills.py  test_s31_features.py  test_short_labels.py  test_splits.py  test_triple_barrier.py
universe/: crypto.txt  etfs.txt  news-pilot.txt  stocks.txt
(+5 files in other folders)
