[project]
name = "signalengine"
version = "0.1.0"
description = "Swing-trading ML prediction engine: triple-barrier labels, LightGBM, purged walk-forward CV, cost-aware backtest"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pyodbc>=5.0",
    "joblib>=1.3",
    "requests>=2.31",
    "ccxt>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
portal = ["flask>=3.0", "gunicorn>=21; sys_platform == 'linux'"]

[project.scripts]
signalengine = "signalengine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["signalengine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
